CAY-2912 Compact SQL logger
cleanup