@@ -21,8 +21,6 @@ package org.apache.cayenne.dba;
 
 import org.apache.cayenne.CayenneRuntimeException;
 import org.apache.cayenne.DataRow;
-import org.apache.cayenne.ObjectId;
-import org.apache.cayenne.ResultIterator;
 import org.apache.cayenne.access.DataNode;
 import org.apache.cayenne.access.OperationObserver;
 import org.apache.cayenne.access.types.ValueObjectType;
@@ -321,20 +319,13 @@ public class JdbcPkGenerator implements PkGenerator {
         pkCache.clear();
     }
 
-    /**
-     * OperationObserver for primary key retrieval.
-     */
-    final class PkRetrieveProcessor implements OperationObserver {
+    static final class PkRetrieveProcessor implements OperationObserver {
 
         Number id;
         final String entityName;
 
         PkRetrieveProcessor(String entityName) {
             this.entityName = entityName;
-        }
-
-        public boolean isIteratedResult() {
-            return false;
         }
 
         public long getId() {
@@ -347,7 +338,7 @@ public class JdbcPkGenerator implements PkGenerator {
 
         public void nextRows(Query query, List<?> dataRows) {
             // process selected object, issue an update query
-            if (dataRows == null || dataRows.size() == 0) {
+            if (dataRows == null || dataRows.isEmpty()) {
                 throw new CayenneRuntimeException("Error generating PK : entity not supported: %s", entityName);
             }
 
@@ -355,7 +346,7 @@ public class JdbcPkGenerator implements PkGenerator {
                 throw new CayenneRuntimeException("Error generating PK : too many rows for entity: %s", entityName);
             }
 
-            DataRow lastPk = (DataRow) dataRows.get(0);
+            DataRow lastPk = (DataRow) dataRows.getFirst();
             id = (Number) lastPk.get("NEXT_ID");
         }
 
@@ -364,16 +355,6 @@ public class JdbcPkGenerator implements PkGenerator {
                 throw new CayenneRuntimeException("Error generating PK for entity '%s': update count is wrong - %d"
                         , entityName, resultCount);
             }
-        }
-
-        public void nextBatchCount(Query query, int[] resultCount) {
-        }
-
-        @Override
-        public void nextGeneratedRows(Query query, ResultIterator<?> keys, List<ObjectId> idsToUpdate) {
-        }
-
-        public void nextRows(Query q, ResultIterator it) {
         }
 
         public void nextQueryException(Query query, Exception ex) {
